--- a/lokasi_rumah.html
+++ b/lokasi_rumah.html
@@ -13,135 +13,35 @@
       padding: 20px;
       text-align: center;
     }
-    h1 {
-      color: #333;
-    }
-    .voice-select {
-      margin: 10px auto 20px;
-      max-width: 300px;
-    }
-    .voice-select select {
-      width: 100%;
-      padding: 8px;
-      font-size: 1em;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-    }
-    .gear-container {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-    }
-    .gear-btn {
-      font-size: 1.5em;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
-    .pengaturan {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 30px;
-      right: 0;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 5px;
-      z-index: 99;
-    }
-    .pengaturan.hidden {
-      display: none;
-    }
-    .pengaturan button {
-      background-color: #3498db;
-      color: white;
-      border: none;
-      padding: 6px 10px;
-      margin: 4px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .pengaturan button:hover {
-      background-color: #2980b9;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-      max-width: 600px;
-      margin: 0 auto 40px;
-    }
-    .item {
-      padding: 8px 10px 18px 10px;
-      box-shadow: 2px 2px 6px #00000033;
-      border-radius: 12px;
-      cursor: pointer;
-      background-color: #ffffff;
-      border: 2px solid #cbd5e1;
-      position: relative;
-      user-select: none;
-      transition: transform 0.2s ease;
-    }
-    .item:hover {
-      transform: scale(1.03);
-    }
-    .emoji {
-      font-size: 2.5em;
-    }
-    .item p {
-      margin: 5px 0;
-      font-size: 1em;
-      font-weight: bold;
-      color: #1f2937;
-    }
-    .controls {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 5px;
-    }
-    .controls button {
-      background: none;
-      border: none;
-      font-size: 1.2em;
-      cursor: pointer;
-      user-select: none;
-    }
-    .fav {
-      color: gray;
-    }
-    .fav.active {
-      color: gold;
-      text-shadow: 0 0 3px gold;
-    }
+    h1 { color: #333; }
+    .gear-container { position: absolute; top: 20px; right: 20px; }
+    .gear-btn { font-size: 1.5em; background: none; border: none; cursor: pointer; }
+    .pengaturan { display: none; flex-direction: column; background: white; border: 1px solid #ccc; border-radius: 8px; padding: 5px; position: absolute; top: 30px; right: 0; z-index: 99; }
+    .pengaturan.show { display: flex; }
+    .pengaturan button { background-color: #3498db; color: white; border: none; padding: 6px 10px; margin: 4px; border-radius: 6px; cursor: pointer; }
+    .container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; max-width: 600px; margin: 0 auto 40px; }
+    .item { padding: 10px 10px 40px 10px; background-color: #ffffff; border: 2px solid #cbd5e1; border-radius: 12px; box-shadow: 2px 2px 6px #00000033; cursor: pointer; position: relative; }
+    .emoji { font-size: 2.5em; }
+    .item p { margin: 5px 0; font-weight: bold; }
+    .controls { position: absolute; bottom: 10px; right: 10px; display: flex; gap: 10px; }
+    .fav { color: gray; }
+    .fav.active { color: gold; text-shadow: 0 0 3px gold; }
+    .feedback { font-size: 0.9em; font-weight: bold; color: #0a3d62; margin-top: 4px; min-height: 18px; }
   </style>
 </head>
 <body>
   <h1>Kategori: Di Rumah</h1>
-
   <div class="gear-container">
     <button class="gear-btn" onclick="togglePengaturan()">⚙️</button>
-    <div id="menuPengaturan" class="pengaturan hidden">
+    <div id="menuPengaturan" class="pengaturan">
       <button onclick="tambahKosakata()">➕ Tambah</button>
       <button onclick="hapusKosakata()">🗑️ Hapus</button>
     </div>
   </div>
-
-  <div class="voice-select">
-    <label for="voiceSelect">Pilih Suara:</label>
-    <select id="voiceSelect">
-      <option value="Indonesian Female" selected>Perempuan</option>
-      <option value="Indonesian Male">Laki-laki</option>
-    </select>
-  </div>
-
   <div class="container" id="gridKategori"></div>
-
   <script>
-    // Data master yang sama dengan favorit
-    const dataMaster = [
+    const key = 'kosakata_lokasi_rumah';
+    const defaultItems = [
       { teks: 'Saya di rumah', emoji: '🏡' },
       { teks: 'Saya mau mandi', emoji: '🛀🏻' },
       { teks: 'Saya mau makan', emoji: '🍛' },
@@ -157,15 +57,13 @@
       { teks: 'Saya mau nonton tv', emoji: '📺' }
     ];
 
-    // Load data kategori dari localStorage atau default
     function loadItems() {
-      const saved = JSON.parse(localStorage.getItem('kosakata_lokasi_rumah') || '[]');
-      // Gabungkan saved dengan default tanpa duplikasi
-      return [...dataMaster.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
+      const saved = JSON.parse(localStorage.getItem(key) || '[]');
+      return [...defaultItems.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
     }
 
     function saveItems(items) {
-      localStorage.setItem('kosakata_lokasi_rumah', JSON.stringify(items));
+      localStorage.setItem(key, JSON.stringify(items));
     }
 
     let dataKategori = {
@@ -173,22 +71,24 @@
       items: loadItems()
     };
 
-    // Load favorit dari localStorage
     const favoritList = JSON.parse(localStorage.getItem('favoritList') || '[]');
 
     function togglePengaturan() {
-      document.getElementById('menuPengaturan').classList.toggle('hidden');
+      document.getElementById('menuPengaturan').classList.toggle('show');
     }
 
     function tambahKosakata() {
       const teks = prompt("Masukkan teks:");
-      const emoji = prompt("Masukkan emoji:");
-      if (teks && emoji) {
-        const newItem = { teks: teks.trim(), emoji: emoji.trim() };
-        dataKategori.items.push(newItem);
-        saveItems(dataKategori.items);
-        renderGridKategori();
+      const emoji = prompt("Masukkan emoji (contoh: 🍕, 🎮, 🧃):");
+      if (!teks || !emoji) return alert("Teks dan emoji wajib diisi!");
+      const newItem = { teks: teks.trim(), emoji: emoji.trim() };
+      if (dataKategori.items.some(item => item.teks === newItem.teks)) {
+        alert("Teks ini sudah ada.");
+        return;
       }
+      dataKategori.items.push(newItem);
+      saveItems(dataKategori.items);
+      renderGridKategori();
     }
 
     function hapusKosakata() {
@@ -204,50 +104,82 @@
     }
 
     function bicara(teks) {
-      const voice = document.getElementById('voiceSelect').value;
-      responsiveVoice.speak(teks, voice);
+      responsiveVoice.speak(teks, "Indonesian Female");
     }
 
     function toggleFavorit(teks) {
-      const idx = favoritList.indexOf(teks);
-      if (idx !== -1) {
-        favoritList.splice(idx, 1);
-      } else {
-        favoritList.push(teks);
-      }
+      const index = favoritList.indexOf(teks);
+      if (index !== -1) favoritList.splice(index, 1);
+      else favoritList.push(teks);
       localStorage.setItem('favoritList', JSON.stringify(favoritList));
       renderGridKategori();
+    }
+
+    function latih(teksTarget, id) {
+      const recognition = new webkitSpeechRecognition();
+      recognition.lang = 'id-ID';
+      recognition.interimResults = false;
+      recognition.onresult = (event) => {
+        const hasil = event.results[0][0].transcript.toLowerCase();
+        const skor = kemiripan(hasil, teksTarget.toLowerCase());
+        const feedback = document.getElementById("feedback-" + id);
+        if (skor >= 0.8) {
+          feedback.innerText = "✅ Bagus!";
+          feedback.style.color = "green";
+        } else {
+          feedback.innerText = "❌ Coba lagi. Kamu bilang: " + hasil;
+          feedback.style.color = "red";
+        }
+      };
+      recognition.onerror = () => alert("Gagal mengenali suara. Coba lagi ya!");
+      recognition.start();
+    }
+
+    function kemiripan(a, b) {
+      const jarak = levenshtein(a, b);
+      return 1 - jarak / Math.max(a.length, b.length);
+    }
+
+    function levenshtein(a, b) {
+      const dp = Array(b.length + 1).fill(null).map(() => Array(a.length + 1).fill(0));
+      for (let i = 0; i <= b.length; i++) dp[i][0] = i;
+      for (let j = 0; j <= a.length; j++) dp[0][j] = j;
+      for (let i = 1; i <= b.length; i++) {
+        for (let j = 1; j <= a.length; j++) {
+          const cost = b[i - 1] === a[j - 1] ? 0 : 1;
+          dp[i][j] = Math.min(
+            dp[i - 1][j] + 1,
+            dp[i][j - 1] + 1,
+            dp[i - 1][j - 1] + cost
+          );
+        }
+      }
+      return dp[b.length][a.length];
     }
 
     function renderGridKategori() {
       const container = document.getElementById('gridKategori');
       container.innerHTML = '';
-
       dataKategori.items.forEach(item => {
         const isFavorit = favoritList.includes(item.teks);
-
-        // Cari emoji dari dataMaster agar sinkron dengan favorit
-        const dataItem = dataMaster.find(d => d.teks === item.teks);
-        const emoji = dataItem ? dataItem.emoji : '❓';
-
+        const id = item.teks.replace(/\s+/g, '-');
         const div = document.createElement('div');
         div.className = 'item';
         div.innerHTML = `
-          <div class="emoji">${emoji}</div>
+          <div class="emoji">${item.emoji}</div>
           <p>${item.teks}</p>
           <div class="controls">
             <button class="fav ${isFavorit ? 'active' : ''}" onclick="event.stopPropagation(); toggleFavorit('${item.teks}')">${isFavorit ? '⭐' : '☆'}</button>
-            <button class="mic" onclick="event.stopPropagation(); bicara('${item.teks}')">🎤</button>
+            <button class="mic" onclick="event.stopPropagation(); latih('${item.teks}', '${id}')">🎤</button>
           </div>
+          <p class="feedback" id="feedback-${id}"></p>
         `;
         div.onclick = () => bicara(item.teks);
         container.appendChild(div);
       });
     }
 
-    window.onload = () => {
-      renderGridKategori();
-    };
+    window.onload = renderGridKategori;
   </script>
 </body>
 </html>
