--- a/lokasi_sekolah.html
+++ b/lokasi_sekolah.html
@@ -2,162 +2,177 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kategori: Di Sekolah</title>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #80daeb;
+      background-color: #fef9ef;
       margin: 0;
       padding: 20px;
       text-align: center;
     }
-    h1 { color: white; }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-      max-width: 600px;
-      margin: 20px auto;
-    }
-    .item {
-      background-color: #fff;
-      padding: 10px;
-      border-radius: 12px;
-      box-shadow: 2px 2px 6px #00000033;
-      position: relative;
-    }
-    .item .emoji { font-size: 2.5em; }
+    h1 { color: #333; }
+    .gear-container { position: absolute; top: 20px; right: 20px; }
+    .gear-btn { font-size: 1.5em; background: none; border: none; cursor: pointer; }
+    .pengaturan { display: none; flex-direction: column; background: white; border: 1px solid #ccc; border-radius: 8px; padding: 5px; position: absolute; top: 30px; right: 0; z-index: 99; }
+    .pengaturan.show { display: flex; }
+    .pengaturan button { background-color: #3498db; color: white; border: none; padding: 6px 10px; margin: 4px; border-radius: 6px; cursor: pointer; }
+    .container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; max-width: 600px; margin: 0 auto 40px; }
+    .item { padding: 10px 10px 40px 10px; background-color: #ffffff; border: 2px solid #cbd5e1; border-radius: 12px; box-shadow: 2px 2px 6px #00000033; cursor: pointer; position: relative; }
+    .emoji { font-size: 2.5em; }
     .item p { margin: 5px 0; font-weight: bold; }
-    #editMenu {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 10px;
-      display: none;
-    }
-    .edit-btn {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      font-size: 1.5em;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
-    .form-popup {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 10px;
-      display: none;
-    }
-    .form-popup input {
-      padding: 6px;
-      margin: 5px;
-    }
+    .controls { position: absolute; bottom: 10px; right: 10px; display: flex; gap: 10px; }
+    .fav { color: gray; }
+    .fav.active { color: gold; text-shadow: 0 0 3px gold; }
+    .feedback { font-size: 0.9em; font-weight: bold; color: #0a3d62; margin-top: 4px; min-height: 18px; }
   </style>
 </head>
 <body>
   <h1>Kategori: Di Sekolah</h1>
-
-  <button class="edit-btn" onclick="toggleMenu()">⚙️</button>
-  <div id="editMenu">
-    <button onclick="showFormTambah()">➕ Tambah Kosakata</button>
-    <button onclick="masukModeHapus()">🗑️ Hapus Kosakata</button>
+  <div class="gear-container">
+    <button class="gear-btn" onclick="togglePengaturan()">⚙️</button>
+    <div id="menuPengaturan" class="pengaturan">
+      <button onclick="tambahKosakata()">➕ Tambah</button>
+      <button onclick="hapusKosakata()">🗑️ Hapus</button>
+    </div>
   </div>
-
-  <div id="formTambah" class="form-popup">
-    <input type="text" id="teksBaru" placeholder="Teks" />
-    <input type="text" id="emojiBaru" placeholder="Emoji" />
-    <button onclick="tambahKosakata()">Simpan</button>
-    <button onclick="tutupFormTambah()">Tutup</button>
-  </div>
-
   <div class="container" id="gridKategori"></div>
-
   <script>
-    let modeHapus = false;
+    const key = 'kosakata_lokasi_sekolah';
+    // Default list teks & emoji
+    const defaultItems = [
+      { teks: 'Saya di sekolah', emoji: '🏫' },
+      { teks: 'Saya mau izin ke toilet', emoji: '✋' },
+      { teks: 'Saya mau belajar', emoji: '📖' },
+      { teks: 'Saya mau ke depan', emoji: '🧍‍♂️' },
+      { teks: 'Saya mau menjawab', emoji: '🙋‍♀️' }
+    ];
 
-    const tambahan = JSON.parse(localStorage.getItem('kosakata_lokasi_sekolah')) || [];
-    const dataKategori = {
+    function loadItems() {
+      const saved = JSON.parse(localStorage.getItem(key) || '[]');
+      return [...defaultItems.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
+    }
+
+    function saveItems(items) {
+      localStorage.setItem(key, JSON.stringify(items));
+    }
+
+    let dataKategori = {
       judul: "Di Sekolah",
-      items: [
-        { teks: 'Saya di sekolah', emoji: '🏫' },
-        { teks: 'Saya mau izin ke toilet', emoji: '✋' },
-        { teks: 'Saya mau belajar', emoji: '📖' },
-        { teks: 'Saya mau ke depan', emoji: '🧍‍♂️' },
-        { teks: 'Saya mau menjawab', emoji: '🙋‍♀️' }
-      ].concat(tambahan)
+      items: loadItems()
     };
 
-    function toggleMenu() {
-      const menu = document.getElementById("editMenu");
-      menu.style.display = menu.style.display === "none" ? "block" : "none";
-    }
+    const favoritList = JSON.parse(localStorage.getItem('favoritList') || '[]');
 
-    function showFormTambah() {
-      document.getElementById("formTambah").style.display = "block";
-    }
-
-    function tutupFormTambah() {
-      document.getElementById("formTambah").style.display = "none";
+    function togglePengaturan() {
+      document.getElementById('menuPengaturan').classList.toggle('show');
     }
 
     function tambahKosakata() {
-      const teks = document.getElementById('teksBaru').value.trim();
-      const emoji = document.getElementById('emojiBaru').value.trim();
-      if (!teks || !emoji) return;
-      tambahan.push({ teks, emoji });
-      localStorage.setItem('kosakata_lokasi_sekolah', JSON.stringify(tambahan));
-      document.getElementById('teksBaru').value = '';
-      document.getElementById('emojiBaru').value = '';
-      tutupFormTambah();
+      const teks = prompt("Masukkan teks:");
+      const emoji = prompt("Masukkan emoji (contoh: 🍕, 🎮, 🧃):");
+      if (!teks || !emoji) return alert("Teks dan emoji wajib diisi!");
+      const newItem = { teks: teks.trim(), emoji: emoji.trim() };
+      if (dataKategori.items.some(item => item.teks === newItem.teks)) {
+        alert("Teks ini sudah ada.");
+        return;
+      }
+      dataKategori.items.push(newItem);
+      saveItems(dataKategori.items);
       renderGridKategori();
     }
 
-    function masukModeHapus() {
-      modeHapus = true;
-      alert("Klik pada kosakata tambahan untuk menghapusnya");
+    function hapusKosakata() {
+      const teks = prompt("Masukkan teks yang ingin dihapus:");
+      const index = dataKategori.items.findIndex(item => item.teks === teks);
+      if (index !== -1) {
+        dataKategori.items.splice(index, 1);
+        saveItems(dataKategori.items);
+        renderGridKategori();
+      } else {
+        alert("Teks tidak ditemukan!");
+      }
+    }
+
+    function bicara(teks) {
+      responsiveVoice.speak(teks, "Indonesian Female");
+    }
+
+    function toggleFavorit(teks) {
+      const index = favoritList.indexOf(teks);
+      if (index !== -1) favoritList.splice(index, 1);
+      else favoritList.push(teks);
+      localStorage.setItem('favoritList', JSON.stringify(favoritList));
+      renderGridKategori();
+    }
+
+    function latih(teksTarget, id) {
+      const recognition = new webkitSpeechRecognition();
+      recognition.lang = 'id-ID';
+      recognition.interimResults = false;
+      recognition.onresult = (event) => {
+        const hasil = event.results[0][0].transcript.toLowerCase();
+        const skor = kemiripan(hasil, teksTarget.toLowerCase());
+        const feedback = document.getElementById("feedback-" + id);
+        if (skor >= 0.8) {
+          feedback.innerText = "✅ Bagus!";
+          feedback.style.color = "green";
+        } else {
+          feedback.innerText = "❌ Coba lagi. Kamu bilang: " + hasil;
+          feedback.style.color = "red";
+        }
+      };
+      recognition.onerror = () => alert("Gagal mengenali suara. Coba lagi ya!");
+      recognition.start();
+    }
+
+    function kemiripan(a, b) {
+      const jarak = levenshtein(a, b);
+      return 1 - jarak / Math.max(a.length, b.length);
+    }
+
+    function levenshtein(a, b) {
+      const dp = Array(b.length + 1).fill(null).map(() => Array(a.length + 1).fill(0));
+      for (let i = 0; i <= b.length; i++) dp[i][0] = i;
+      for (let j = 0; j <= a.length; j++) dp[0][j] = j;
+      for (let i = 1; i <= b.length; i++) {
+        for (let j = 1; j <= a.length; j++) {
+          const cost = b[i - 1] === a[j - 1] ? 0 : 1;
+          dp[i][j] = Math.min(
+            dp[i - 1][j] + 1,
+            dp[i][j - 1] + 1,
+            dp[i - 1][j - 1] + cost
+          );
+        }
+      }
+      return dp[b.length][a.length];
     }
 
     function renderGridKategori() {
       const container = document.getElementById('gridKategori');
       container.innerHTML = '';
       dataKategori.items.forEach(item => {
+        const isFavorit = favoritList.includes(item.teks);
+        const id = item.teks.replace(/\s+/g, '-');
         const div = document.createElement('div');
         div.className = 'item';
-        div.innerHTML = `<div class="emoji">${item.emoji}</div><p>${item.teks}</p>`;
-
-        if (tambahan.some(t => t.teks === item.teks)) {
-          div.onclick = () => {
-            if (modeHapus) {
-              const konfirmasi = confirm("Hapus kosakata ini?");
-              if (konfirmasi) {
-                const baru = tambahan.filter(t => t.teks !== item.teks);
-                localStorage.setItem('kosakata_lokasi_sekolah', JSON.stringify(baru));
-                location.reload();
-              }
-            }
-          }
-        } else {
-          div.onclick = () => responsiveVoice.speak(item.teks, "Indonesian Female");
-        }
+        div.innerHTML = `
+          <div class="emoji">${item.emoji}</div>
+          <p>${item.teks}</p>
+          <div class="controls">
+            <button class="fav ${isFavorit ? 'active' : ''}" onclick="event.stopPropagation(); toggleFavorit('${item.teks}')">${isFavorit ? '⭐' : '☆'}</button>
+            <button class="mic" onclick="event.stopPropagation(); latih('${item.teks}', '${id}')">🎤</button>
+          </div>
+          <p class="feedback" id="feedback-${id}"></p>
+        `;
+        div.onclick = () => bicara(item.teks);
         container.appendChild(div);
       });
     }
 
-    window.onload = () => {
-      renderGridKategori();
-    }
+    window.onload = renderGridKategori;
   </script>
 </body>
 </html>
