--- a/kebutuhan.html
+++ b/kebutuhan.html
@@ -7,188 +7,120 @@
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <style>
     body {
-      font-family: 'Arial', cursive, arial;
-      background-color: #80daeb;
+      font-family: 'Arial', sans-serif;
+      background-color: #fef9ef;
       margin: 0;
       padding: 20px;
       text-align: center;
     }
-
-    h1 {
-      color: #ffffff;
-      margin-bottom: 10px;
-    }
-
-    .voice-select {
-      margin: 10px auto 20px;
-      max-width: 300px;
-    }
-
-    .voice-select select {
-      width: 100%;
-      padding: 8px;
-      font-size: 1em;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-    }
-
-    .container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-      max-width: 600px;
-      margin: 0 auto 40px;
-    }
-
-    .item {
-      padding: 8px 10px 18px 10px;
-      box-shadow: 2px 2px 6px #00000033;
-      border-radius: 12px;
-      cursor: pointer;
-      user-select: none;
-      transition: transform 0.2s ease;
-      background-color: #ffffff;
-      border: 2px solid #cbd5e1;
-      position: relative;
-    }
-
-    .item:hover {
-      transform: scale(1.03);
-    }
-
-    .emoji {
-      font-size: 2.5em;
-      line-height: 1;
-    }
-
-    .item p {
-      margin: 5px 0;
-      font-size: 1em;
-      color: #1f2937;
-    }
-
-    .controls {
-      position: relative;
-      display: flex;
-      justify-content: flex-end;
-      gap: 8px;
-    }
-
-    .controls button.fav {
-      position: absolute;
-      top: 8px;
-      left: 8px;
-      font-size: 1.6em;
-      color: #888;
-      background: none;
-      border: none;
-      cursor: pointer;
-      user-select: none;
-      transition: color 0.3s ease, filter 0.3s ease;
-      z-index: 10;
-      filter: grayscale(70%);
-    }
-
-    .controls button.fav.active {
-      color: #FFD700;
-      filter: none;
-      text-shadow: 0 0 5px #FFD700;
-    }
-
-    .controls button.mic {
-      background: none;
-      border: none;
-      font-size: 1.2em;
-      cursor: pointer;
-      color: #0a3d62;
-      position: relative;
-      z-index: 5;
-    }
-
-    .feedback {
-      margin-top: 4px;
-      font-weight: bold;
-      min-height: 18px;
-      font-size: 0.9em;
-      color: #0a3d62;
-    }
+    h1 { color: #333; }
+    .gear-container { position: absolute; top: 20px; right: 20px; }
+    .gear-btn { font-size: 1.5em; background: none; border: none; cursor: pointer; }
+    .pengaturan { display: none; flex-direction: column; background: white; border: 1px solid #ccc; border-radius: 8px; padding: 5px; position: absolute; top: 30px; right: 0; z-index: 99; }
+    .pengaturan.show { display: flex; }
+    .pengaturan button { background-color: #3498db; color: white; border: none; padding: 6px 10px; margin: 4px; border-radius: 6px; cursor: pointer; }
+    .container { display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px; max-width: 600px; margin: 0 auto 40px; }
+    .item { padding: 10px 10px 40px 10px; background-color: #ffffff; border: 2px solid #cbd5e1; border-radius: 12px; box-shadow: 2px 2px 6px #00000033; cursor: pointer; position: relative; }
+    .emoji { font-size: 2.5em; }
+    .item p { margin: 5px 0; font-weight: bold; }
+    .controls { position: absolute; bottom: 10px; right: 10px; display: flex; gap: 10px; }
+    .fav { color: gray; }
+    .fav.active { color: gold; text-shadow: 0 0 3px gold; }
+    .feedback { font-size: 0.9em; font-weight: bold; color: #0a3d62; margin-top: 4px; min-height: 18px; }
   </style>
 </head>
 <body>
-
-  <h1 id="judulKategori">Kategori: Kebutuhan Harian</h1>
-
-  <div class="voice-select">
-    <label for="voiceSelect" style="color:white">Pilih Suara:</label>
-    <select id="voiceSelect">
-      <option value="Indonesian Female" selected>Perempuan</option>
-      <option value="Indonesian Male">Laki-laki</option>
-    </select>
+  <h1>Kategori: Kebutuhan Harian</h1>
+  <div class="gear-container">
+    <button class="gear-btn" onclick="togglePengaturan()">⚙️</button>
+    <div id="menuPengaturan" class="pengaturan">
+      <button onclick="tambahKosakata()">➕ Tambah</button>
+      <button onclick="hapusKosakata()">🗑️ Hapus</button>
+    </div>
   </div>
-
   <div class="container" id="gridKategori"></div>
-
   <script>
-    const soundClickMic = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_c9bdf8633e.mp3?filename=mouse-click-124467.mp3');
-    const soundRecordStart = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_d264174dae.mp3?filename=pop-94319.mp3');
-    const soundCorrect = new Audio('https://cdn.pixabay.com/download/audio/2022/02/23/audio_4b4e7647fa.mp3?filename=correct-2-46134.mp3');
-    const soundWrong = new Audio('https://cdn.pixabay.com/download/audio/2022/03/15/audio_94a5831e04.mp3?filename=error-126627.mp3');
+    const key = 'kosakata_kebutuhan_harian';
+    const defaultItems = [
+      { teks: 'Saya di rumah', emoji: '🏡' },
+      { teks: 'Saya mau mandi', emoji: '🛀🏻' },
+      { teks: 'Saya mau makan', emoji: '🍛' },
+      { teks: 'Saya mau minum', emoji: '🥛' },
+      { teks: 'Saya mau main', emoji: '🤹🏻‍♀️' },
+      { teks: 'Saya mau ikut', emoji: '🙋🏻‍♂️' },
+      { teks: 'Saya mau pergi', emoji: '🛵' },
+      { teks: 'Saya mau sekolah', emoji: '🎒' },
+      { teks: 'Saya mau solat', emoji: '🕌' },
+      { teks: 'Saya mau mengaji', emoji: '🧕🏻' },
+      { teks: 'Saya mau uang', emoji: '💵' },
+      { teks: 'Saya mau jajan', emoji: '🍩' },
+      { teks: 'Saya mau nonton tv', emoji: '📺' },
+      { teks: 'Saya mau ke toilet', emoji: '🚽' },
+      { teks: 'Saya mau tidur', emoji: '😴' }
+    ];
 
-    const dataKategori = {
+    function loadItems() {
+      const saved = JSON.parse(localStorage.getItem(key) || '[]');
+      return [...defaultItems.filter(d => !saved.some(s => s.teks === d.teks)), ...saved];
+    }
+
+    function saveItems(items) {
+      localStorage.setItem(key, JSON.stringify(items));
+    }
+
+    let dataKategori = {
       judul: "Kebutuhan Harian",
-      items: [
-        { teks: 'Saya di rumah', emoji: '🏡' },
-        { teks: 'Saya mau mandi', emoji: '🛀🏻' },
-        { teks: 'Saya mau makan', emoji: '🍛' },
-        { teks: 'Saya mau minum', emoji: '🥛' },
-        { teks: 'Saya mau main', emoji: '🤹🏻‍♀️' },
-        { teks: 'Saya mau ikut', emoji: '🙋🏻‍♂️' },
-        { teks: 'Saya mau pergi', emoji: '🛵' },
-        { teks: 'Saya mau sekolah', emoji: '🎒' },
-        { teks: 'Saya mau solat', emoji: '🕌' },
-        { teks: 'Saya mau mengaji', emoji: '🧕🏻' },
-        { teks: 'Saya mau uang', emoji: '💵' },
-        { teks: 'Saya mau jajan', emoji: '🍩' },
-        { teks: 'Saya mau nonton tv', emoji: '📺' },
-        { teks: 'Saya mau ke toilet', emoji: '🚽' },
-        { teks: 'Saya mau tidur', emoji: '😴' }
-      ]
+      items: loadItems()
     };
 
-    function loadFavorit() {
-      return JSON.parse(localStorage.getItem('favoritList')) || [];
+    const favoritList = JSON.parse(localStorage.getItem('favoritList') || '[]');
+
+    function togglePengaturan() {
+      document.getElementById('menuPengaturan').classList.toggle('show');
     }
 
-    function saveFavorit(list) {
-      localStorage.setItem('favoritList', JSON.stringify(list));
-    }
-
-    function toggleFavorit(teks) {
-      let favoritList = loadFavorit();
-      const idx = favoritList.indexOf(teks);
-      if (idx > -1) {
-        favoritList.splice(idx, 1);
-      } else {
-        favoritList.push(teks);
+    function tambahKosakata() {
+      const teks = prompt("Masukkan teks:");
+      const emoji = prompt("Masukkan emoji (contoh: 🍕, 🎮, 🧃):");
+      if (!teks || !emoji) return alert("Teks dan emoji wajib diisi!");
+      const newItem = { teks: teks.trim(), emoji: emoji.trim() };
+      if (dataKategori.items.some(item => item.teks === newItem.teks)) {
+        alert("Teks ini sudah ada.");
+        return;
       }
-      saveFavorit(favoritList);
+      dataKategori.items.push(newItem);
+      saveItems(dataKategori.items);
       renderGridKategori();
     }
 
+    function hapusKosakata() {
+      const teks = prompt("Masukkan teks yang ingin dihapus:");
+      const index = dataKategori.items.findIndex(item => item.teks === teks);
+      if (index !== -1) {
+        dataKategori.items.splice(index, 1);
+        saveItems(dataKategori.items);
+        renderGridKategori();
+      } else {
+        alert("Teks tidak ditemukan!");
+      }
+    }
+
     function bicara(teks) {
-      const voice = document.getElementById('voiceSelect').value || "Indonesian Female";
-      responsiveVoice.speak(teks, voice);
+      responsiveVoice.speak(teks, "Indonesian Female");
+    }
+
+    function toggleFavorit(teks) {
+      const index = favoritList.indexOf(teks);
+      if (index !== -1) favoritList.splice(index, 1);
+      else favoritList.push(teks);
+      localStorage.setItem('favoritList', JSON.stringify(favoritList));
+      renderGridKategori();
     }
 
     function latih(teksTarget, id) {
-      soundClickMic.play();
       const recognition = new webkitSpeechRecognition();
       recognition.lang = 'id-ID';
       recognition.interimResults = false;
-
-      recognition.onstart = () => soundRecordStart.play();
-
       recognition.onresult = (event) => {
         const hasil = event.results[0][0].transcript.toLowerCase();
         const skor = kemiripan(hasil, teksTarget.toLowerCase());
@@ -196,14 +128,11 @@
         if (skor >= 0.8) {
           feedback.innerText = "✅ Bagus!";
           feedback.style.color = "green";
-          soundCorrect.play();
         } else {
           feedback.innerText = "❌ Coba lagi. Kamu bilang: " + hasil;
           feedback.style.color = "red";
-          soundWrong.play();
         }
       };
-
       recognition.onerror = () => alert("Gagal mengenali suara. Coba lagi ya!");
       recognition.start();
     }
@@ -231,38 +160,28 @@
     }
 
     function renderGridKategori() {
-      document.getElementById('judulKategori').innerText = `Kategori: ${dataKategori.judul}`;
       const container = document.getElementById('gridKategori');
       container.innerHTML = '';
-
-      const favoritList = loadFavorit();
-
       dataKategori.items.forEach(item => {
-        const teks = item.teks;
-        const emoji = item.emoji || '❓';
-        const idTeks = teks.toLowerCase().replace(/\s+/g, '-').replace(/[^\w-]/g, '');
-        const isFavorit = favoritList.includes(teks);
-
+        const isFavorit = favoritList.includes(item.teks);
+        const id = item.teks.replace(/\s+/g, '-');
         const div = document.createElement('div');
         div.className = 'item';
         div.innerHTML = `
-          <div class="emoji">${emoji}</div>
-          <p>${teks}</p>
+          <div class="emoji">${item.emoji}</div>
+          <p>${item.teks}</p>
           <div class="controls">
-            <button class="fav ${isFavorit ? 'active' : ''}" title="${isFavorit ? 'Hapus dari Favorit' : 'Tambah ke Favorit'}" onclick="event.stopPropagation(); toggleFavorit('${teks}')">⭐</button>
-            <button class="mic" title="Latih bicara" onclick="event.stopPropagation(); latih('${teks}', '${idTeks}')">🎤</button>
+            <button class="fav ${isFavorit ? 'active' : ''}" onclick="event.stopPropagation(); toggleFavorit('${item.teks}')">${isFavorit ? '⭐' : '☆'}</button>
+            <button class="mic" onclick="event.stopPropagation(); latih('${item.teks}', '${id}')">🎤</button>
           </div>
-          <p class="feedback" id="feedback-${idTeks}"></p>
+          <p class="feedback" id="feedback-${id}"></p>
         `;
-        div.onclick = () => bicara(teks);
+        div.onclick = () => bicara(item.teks);
         container.appendChild(div);
       });
     }
 
-    window.onload = () => {
-      renderGridKategori();
-    };
+    window.onload = renderGridKategori;
   </script>
-
 </body>
 </html>
